[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Coaster.gd" type="Script" id=2]
[ext_resource path="res://src/Shaders/Outline.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/outline_color = Color( 1, 1, 1, 0 )
shader_param/width = 3.0

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Coaster" type="Area2D"]
collision_layer = 4
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SnapPosition" type="Position2D" parent="."]
position = Vector2( 0, 12 )

[connection signal="area_entered" from="." to="." method="_on_Coaster_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Coaster_area_exited"]
